objects/ssot__PriceAdjustmentGroup__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CouponId__c</fullName>
        <label>Coupon</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Price Adjustment Group Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsManuallyApplied__c</fullName>
        <label>Is Manually Applied</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalPriceAdjustmentGroupId__c</fullName>
        <label>Original Price Adjustment Group</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceAdjustmentMethod__c</fullName>
        <label>Price Adjustment Method</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonText__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderPriceAdjustmentId__c</fullName>
        <label>Sales Order Price Adjustment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderPriceAdjustmentTypeID__c</fullName>
        <label>Sales Order Price Adjustment Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjustmentId__c</fullName>
        <label>Sales Order Product Price Adjustment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215436_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceAdjustmentGroup_SalesOrderProdu_rel</label>
        <referenceTo>ssot__SalesOrderProductPriceAdjustment__dlm</referenceTo>
        <relationshipLabel>PriceAdjustmentGroup_SalesOrderProdu_rel</relationshipLabel>
        <relationshipName>rel_1697761215436_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215586_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceAdjustmentGroup_CouponId_map_Co_rel</label>
        <referenceTo>ssot__Coupon__dlm</referenceTo>
        <relationshipLabel>PriceAdjustmentGroup_CouponId_map_Co_rel</relationshipLabel>
        <relationshipName>rel_1697761215586_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761215670_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PriceAdjustmentGroup_PromotionId_map_rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PriceAdjustmentGroup_PromotionId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761215670_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>